--- a/Tehtava6_1/app/src/main/AndroidManifest.xml
+++ b/Tehtava6_1/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.Tehtava6_1"
         tools:targetApi="31">
         <activity
+            android:name=".PresidentDetailsActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
